--- a/lib/styles/typography.scss
+++ b/lib/styles/typography.scss
@@ -7,22 +7,34 @@
 
 .font {
   &-headline {
+    &-xl {
+      font-size: 2.25rem;
+      line-height: 2.625rem;
+    }
+    &-lg {
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+    }
     &-md {
       font-size: 1.25rem;
       line-height: 1.625rem;
     }
-    &-sm {
+    &-sm, &-xs {
       font-size: 1.125rem;
       line-height: 1.5rem;
     }
   }
 
   &-subheadline {
+    &-xl, &-lg {
+      font-size: 1.25rem;
+      line-height: 1.625rem;
+    }
     &-md {
       font-size: 1rem;
       line-height: 1.375rem;
     }
-    &-sm {
+    &-sm, &-xs {
       font-size: 0.875rem;
       line-height: 1.25rem;
     }
@@ -71,6 +83,90 @@
     &-xs {
       font-size: 0.6875rem;
       line-height: 1rem;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .font {
+    &-headline {
+      &-xl {
+        font-size: 3.75rem;
+        line-height: 4rem;
+      }
+      &-lg {
+        font-size: 3.125rem;
+        line-height: 3.375rem;
+      }
+      &-md {
+        font-size: 1.5rem;
+        line-height: 1.875rem;
+      }
+      &-sm, &-xs {
+        font-size: 1.25rem;
+        line-height: 1.625rem;
+      }
+    }
+
+    &-subheadline {
+      &-xl, &-lg {
+        font-size: 1.875rem;
+        line-height: 2.25rem;
+      }
+      &-md {
+        font-size: 1.125rem;
+        line-height: 1.5rem;
+      }
+      &-sm, &-xs {
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+      }
+    }
+
+    &-highlight {
+      &-xl {
+        font-size: 1.625rem;
+        line-height: 2rem;
+      }
+      &-lg {
+        font-size: 1.5rem;
+        line-height: 1.875rem;
+      }
+      &-md {
+        font-size: 1.375rem;
+        line-height: 1.75rem;
+      }
+      &-sm {
+        font-size: 1.25rem;
+        line-height: 1.625rem;
+      }
+      &-xs {
+        font-size: 1.125rem;
+        line-height: 1.5rem;
+      }
+    }
+
+    &-body {
+      &-xl {
+        font-size: 1.375rem;
+        line-height: 1.75rem;
+      }
+      &-lg {
+        font-size: 1rem;
+        line-height: 1.5rem;
+      }
+      &-md {
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+      }
+      &-sm {
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+      }
+      &-xs {
+        font-size: 0.6875rem;
+        line-height: 1rem;
+      }
     }
   }
 }
