--- a/lib/components/Pressable/styles.scss
+++ b/lib/components/Pressable/styles.scss
@@ -1,8 +1,7 @@
-.button {
+.pressable {
   border: 1px solid;
   border-radius: 4px;
-
-
+  cursor: pointer;
 
   &.xs,&.sm {
     padding: 0.3125rem;
@@ -30,12 +29,14 @@
   }
 
   &.fill {
+    & {
+      font-weight: 600;
+    }
     &-primary {
       background-color: var(--primary-500);
       color: var(--neutral-0);
       border-color: var(--primary-500);
-      font-weight: 600;
-
+      
       &:hover {
         background-color: var(--primary-550);
         border-color: var(--primary-550);
@@ -52,7 +53,6 @@
       background-color: var(--neutral-0);
       color: var(--neutral-950);
       border-color: var(--neutral-0);
-      font-weight: 600;
       
       &:hover {
         background-color: var(--primary-50);
@@ -68,13 +68,14 @@
       }
     }
   }
-
   &.outline {
+    & {
+      background-color: transparent;
+      font-weight: 600;
+    }
     &-primary {
       color: var(--primary-500);
-      background-color: transparent;
       border-color: var(--primary-500);
-      font-weight: 600;
 
       &:hover {
         background-color: var(--primary-50);
@@ -89,30 +90,10 @@
     }
     &-secondary {
       color: var(--neutral-950);
-      background-color: transparent;
       border-color: var(--neutral-500);
-      font-weight: 600;
 
       &:hover {
         background-color: var(--primary-50);
-      }
-      &:disabled {
-        color: var(--neutral-600);
-        border-color: var(--neutral-600);
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
-      }
-    }
-    &-tertiary {
-      color: var(--neutral-0);
-      background-color: transparent;
-      border-color: var(--neutral-0);
-      font-weight: 600;
-
-      &:hover {
-        border-color: var(--primary-200);
-        color: var(--primary-200);
       }
       &:disabled {
         color: var(--neutral-600);
@@ -124,12 +105,15 @@
     }
   }
   &.flat {
-    &-primary {
-      color: var(--primary-500);
+    & {
       background-color: transparent;
       font-weight: 500;
       border-color: transparent;
+    }
 
+    &-primary {
+      color: var(--primary-500);
+      
       &:hover {
         background-color: var(--primary-50);
       }
@@ -141,10 +125,7 @@
       }
     }
     &-secondary {
-      color: var(--neutral-950);      
-      background-color: transparent;
-      font-weight: 500;
-      border-color: transparent;
+      color: var(--neutral-950);
 
       &:hover {
         background-color: var(--primary-50);
@@ -156,5 +137,28 @@
         outline: 3px solid var(--primary-200);
       }
     }
+  }
+
+  &.link {
+    border: none;
+    text-decoration: underline;
+    color: var(--primary-500);
+    background-color: transparent;
+    padding: 0.125rem 0.25rem;
+
+    &:hover {
+      color: var(--primary-550);
+    }
+    &:disabled {
+      color: var(--neutral-500);
+    }
+    &:focus {
+      outline: 3px solid var(--primary-200);
+    }
+
+    &-secondary {
+      text-decoration: none;
+    }
+
   }
 }
