--- a/lib/components/Pressable/styles.scss
+++ b/lib/components/Pressable/styles.scss
@@ -6,28 +6,28 @@
   &.xs,&.sm {
     padding: 0.125rem 0.3125rem;
 
-    &.choice-chip {
+    &.choice-chip, &.filter-chip {
       border-radius: 18px;
     }
   }
   &.md {
     padding: 0.3125rem 0.4375rem;
 
-    &.choice-chip {
+    &.choice-chip, &.filter-chip {
       border-radius: 18px;
     }
   }
   &.lg {
     padding: 0.5rem 0.6875rem;
 
-    &.choice-chip {
+    &.choice-chip, &.filter-chip {
       border-radius: 24px;
     }
   }
   &.xl {
     padding: 0.9375rem;
 
-    &.choice-chip {
+    &.choice-chip, &.filter-chip {
       border-radius: 28px;
     }
   }
@@ -153,7 +153,7 @@
 
   }
 
-  &.choice-chip {
+  &.choice-chip, &.filter-chip {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -178,6 +178,12 @@
     &.selected:not(:disabled) {
       color: var(--primary-500);
       border-color: var(--primary-500);
+    }
+  }
+
+  &.filter-chip {
+    & .label {
+      color: var(--font);
     }
   }
 }
