feat: se suma las cards

--- a/lib/global.scss
+++ b/lib/global.scss
@@ -5,3 +5,4 @@
 /* Components */
 @import url('/lib/components/Pill/styles.scss');
 @import url('/lib/components/Pressable/styles.scss');
+@import url('/lib/components/Card/styles.scss');
