--- a/lib/components/Pressable/styles.scss
+++ b/lib/components/Pressable/styles.scss
@@ -3,6 +3,13 @@
   border-radius: 4px;
   cursor: pointer;
 
+  &:hover:not(:disabled) {
+    background-color: var(--pressable-hover);
+  }
+  &:focus {
+    outline: 3px solid var(--pressable-focus);
+  }
+
   &.xs,&.sm {
     padding: 0.125rem 0.3125rem;
 
@@ -42,16 +49,13 @@
       border-color: var(--primary-500);
       
       &:hover:not(:disabled) {
-        background-color: var(--primary-550);
-        border-color: var(--primary-550);
+        background-color: color-mix(in srgb, var(--primary-500) 90%, #000);
+        border-color: color-mix(in srgb, var(--primary-500) 90%, #000);
       }
       &:disabled {
         background-color: var(--disabled-600);
         border-color: var(--disabled-600);
         cursor: not-allowed;
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
       }
     }
   }
@@ -64,32 +68,21 @@
       color: var(--primary-500);
       border-color: var(--primary-500);
 
-      &:hover:not(:disabled) {
-        background-color: var(--primary-50);
-      }
       &:disabled {
         color: var(--disabled-600);
         border-color: var(--disabled-600);
         cursor: not-allowed;
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
       }
     }
+
     &-neutral {
       color: var(--font);
-      border-color: var(--neutral-500);
+      border-color: var(--pressable-neutral);
 
-      &:hover:not(:disabled) {
-        background-color: var(--primary-50);
-      }
       &:disabled {
         color: var(--disabled-600);
         border-color: var(--disabled-600);
         cursor: not-allowed;
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
       }
     }
   }
@@ -103,29 +96,17 @@
     &-primary {
       color: var(--primary-500);
       
-      &:hover:not(:disabled) {
-        background-color: var(--primary-50);
-      }
       &:disabled {
         color: var(--disabled-600);
         cursor: not-allowed;
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
       }
     }
     &-neutral {
       color: var(--font);
 
-      &:hover:not(:disabled) {
-        background-color: var(--primary-50);
-      }
       &:disabled {
         color: var(--disabled-600);
         cursor: not-allowed;
-      }
-      &:focus {
-        outline: 3px solid var(--primary-200);
       }
     }
   }
@@ -137,50 +118,35 @@
     padding: 0.125rem 0.25rem;
 
     &:hover:not(:disabled) {
-      color: var(--primary-550);
+      color: color-mix(in srgb, var(--primary-500) 90%, #000);
+      background-color: transparent;
     }
     &:disabled {
-      color: var(--neutral-500);
+      color: var(--pressable-neutral);
       cursor: not-allowed;
     }
-    &:focus {
-      outline: 3px solid var(--primary-200);
-    }
-
     &-plain {
       text-decoration: none;
     }
-
   }
-
   &.choice-chip, &.filter-chip {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     background-color: var(--background-components);
-    border-color: var(--neutral-600);
-    gap: 8px;
-    
-    &:hover:not(:disabled) {
-      background-color: var(--primary-50);
-    }
+    border-color: var(--pressable-neutral);
+    gap: 0.5rem;
 
     &:disabled {
       color: var(--disabled-600);
       border-color: var(--disabled-600);
       cursor: not-allowed;
     }
-
-    &:focus {
-      outline: 3px solid var(--primary-200);
-    }
-
     &.selected:not(:disabled) {
       color: var(--primary-500);
       border-color: var(--primary-500);
     }
   }
-
   &.filter-chip {
     & .label {
       color: var(--font);
